--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
   "scripts": {
-    "dev": "npx tsnd --respawn --transpile-only ./src/server.ts"
+    "dev": "npx tsnd --respawn --transpile-only ./src/server.ts",
+    "test": "ts-node src/index.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/express-graphql": "^0.9.0",
     "@types/graphql": "^14.5.0",
+    "@types/node": "^8.0.29",
+    "ts-node": "3.3.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.3.5"
+    "typescript": "3.3.3333"
   },
   "dependencies": {
+    "apollo-server": "^3.0.2",
+    "apollo-server-core": "^3.0.2",
+    "apollo-server-express": "^3.0.2",
     "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.5.1"
+    "graphql": "^15.5.1",
+    "graphql-tag": "^2.12.5",
+    "pg": "^8.4.0",
+    "reflect-metadata": "^0.1.10",
+    "typeorm": "0.2.34"
   }
 }
